--- a/Composing/Latex/Example/范例30-旋转盒子的应用/30.tex
+++ b/Composing/Latex/Example/范例30-旋转盒子的应用/30.tex
@@ -17,6 +17,12 @@
 
 \begin{document}
 
-你好，欢迎使用我的模板
+\rotatebox{0}{对象}
+\rotatebox{45}{对象}
+\rotatebox[origin=1b]{-30}{对象}
+\rotatebox[x=1cm,y=-1cm]{75}{对象}
+\rotatebox[origin=c,units=-360]{45}{对象}
+\rotatebox[origin=c,units=-360]{-45}{对象}
+\rotatebox[origin=rb,units=6.283185]{1.570796}{对象}
 
 \end{document}
