--- a/Composing/Latex/Example/范例31-缩放盒子的应用/31.tex
+++ b/Composing/Latex/Example/范例31-缩放盒子的应用/31.tex
@@ -17,6 +17,7 @@
 
 \begin{document}
 
-你好，欢迎使用我的模板
+\makebox[0cm][l]{\rule{9.2mm}{0.4pt}}%
+\makebox[0cm][l]{排版}\scalebox{1}[-1]{排版}
 
 \end{document}
