--- a/Composing/Latex/Example/范例25-标尺盒子的外观/25.tex
+++ b/Composing/Latex/Example/范例25-标尺盒子的外观/25.tex
@@ -5,18 +5,20 @@
 %  * @Last Modified time: 2024-10-25 21:50:14 
 %  */
 \documentclass{ctexart}
-\usepackage[paperheight=29.7cm,paperwidth=21cm,bottom=2mm,left=2mm,right=2mm,top=2mm]{geometry}% 纸张大小
+\usepackage[paperheight=18cm,paperwidth=13cm,bottom=2mm,left=2mm,right=2mm,top=2mm]{geometry}% 纸张大小
 \usepackage{paralist,graphicx,xcolor}% 列表，图片，颜色
 \usepackage{amsmath}% 公式
 \usepackage{dashbox}% 虚线框命令\dbox
 \usepackage{lmodern}% 使用可缩放字体：使用可缩放的字体包，例如 lmodern 或 newtxmath，这些字体包支持更多的字体大小。
-\usepackage{graphicx}% 可以使用变换盒子命令
-
-% \setlength{\textwidth}{<1000>}% 设置文本宽度
 \pagestyle{empty}% 无页码
 
 \begin{document}
 
-你好，欢迎使用我的模板
+\rule[0mm]{3mm}{5mm}
+\rule[3mm]{3mm}{5mm}
+\rule[-3mm]{3mm}{5mm}
+\rule[-5mm]{3mm}{5mm}
+\rule[-7mm]{3mm}{5mm}
 
 \end{document}
+
