docs(MyTex): 更新学习笔记模板
- 修改文档标题和作者信息
- 优化文档结构，增加目录和章节标题
- 添加示例内容，包括数学公式、图形和代码示例
- 更新文档样式，使用 ctexart 替代 article 类

--- a/Composing/Latex/Mytex/模板1-笔记.tex
+++ b/Composing/Latex/Mytex/模板1-笔记.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{ctexart}
 \usepackage{amsmath, amssymb, amsthm}  % 数学公式
 \usepackage{graphicx}                  % 插入图片
 \usepackage{hyperref}                  % 超链接
@@ -21,7 +21,7 @@
 
 % 定义标题和作者信息
 \title{Learning Notes}
-\author{Your Name}
+\author{小袁}
 \date{\today}
 
 \begin{document}
